# pyaxissecurity

./: .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  setup.py
docs/: ApplicationGroupModelV1.md  ApplicationGroupsApi.md  ApplicationModelType.md  ApplicationModelV1.md  ApplicationModelV1Type.md  ApplicationsApi.md  CommitApi.md  ConnectorCreateResponseModelV1.md  ConnectorModelV1.md  ConnectorRegenerateResponseModelV1.md  ConnectorStatus.md  ConnectorStatusResponseModelV1.md  ConnectorZoneModelV1.md  ConnectorZonePurpose.md  ConnectorZoneType.md  ConnectorZonesApi.md  ConnectorsApi.md  DescriptionNamedModelBase.md  GroupModelV1.md  GroupsApi.md  ModelBase.md  NamedModelBase.md  NetworkRangeApplicationDataModelV1.md  PagedApiResponseOfIEnumerableOfConnectorModelV1.md  PagedApiResponseOfIEnumerableOfConnectorZoneModelV1.md  PagedApiResponseOfIEnumerableOfGroupModelV1.md  PagedApiResponseOfIEnumerableOfSslExclusionModelV1.md  PagedApiResponseOfIEnumerableOfSwgCategoryModelV1.md  PagedApiResponseOfIEnumerableOfUserModelV1.md  PublicAdminApiError.md  SlimModelV1.md  SslExclusionModelV1.md  SslExclusionType.md  SslExclusionsApi.md  SwgCategoryApi.md  SwgCategoryModelV1.md  SwgCategoryType.md  UserModelV1.md  UsersApi.md
pyaxissecurity/: __init__.py  api_client.py  configuration.py  rest.py
test/: test_application_group_model_v1.py  test_application_groups_api.py  test_application_model_type.py  test_application_model_v1.py  test_application_model_v1_type.py  test_applications_api.py  test_commit_api.py  test_connector_create_response_model_v1.py  (+32 more)
(+42 files in other folders)
